--- a/themes/dohmh/layouts/data-features/healthy-homes.html
+++ b/themes/dohmh/layouts/data-features/healthy-homes.html
@@ -70,7 +70,7 @@
         <li>To manage pests, get the Integrated Pest Management toolkit <a href="https://www.nyc.gov/assets/doh/downloads/pdf/pesticide/mgmt-tips.pdf"><span class="sr-only">integrated pest management</span> for residents</a> or <a href="https://www.nyc.gov/assets/doh/downloads/pdf/pesticide/ipm-toolkit.pdf"><span class="sr-only">integrated pest management</span> for building managers</a>.</li>
         <li>To manage mold, <a href="https://www.nyc.gov/assets/doh/downloads/pdf/epi/prevent-and-get-rid-of-mold.pdf">download this mold prevention brochure</a>. </li>
         <li><a href="https://www.nyc.gov/site/doh/health/health-topics/healthy-neighborhoods-asthma-triggers.page">Request a free home assessment of asthma triggers</a>.</li>
-        <li><a href="https://www.nyc.gov/assets/doh/downloads/pdf/poison/poison-brochure-proof.pdf">Poison-proof your home</a> and <a href="https://www.nyc.gov/lead">visit nyc.gov/lead for resources on lead poisoning preveition</a>.</li>
+        <li><a href="https://www.nyc.gov/assets/doh/downloads/pdf/poison/poison-brochure-proof.pdf">Poison-proof your home</a> and <a href="https://www.nyc.gov/lead">visit nyc.gov/lead for resources on lead poisoning prevention</a>.</li>
         <li><a href="https://www.nyc.gov/site/doh/health/health-topics/carbon-monoxide.page">Protect your family from carbon monoxide poisoning</a>.</li>
       </ul></p>
       <p><a href="https://www.nyc.gov/health/healthyhomes">Get more resources on keeping your home healthy at the Healthy Homes webpage</a>.</p>
