--- a/themes/dohmh/layouts/partials/keywords.html
+++ b/themes/dohmh/layouts/partials/keywords.html
@@ -1,5 +1,6 @@
 <div class="keywords p-1" data-pagefind-ignore="all">
 {{- if .Params.keywords -}}
+<span class="font-weight-bold">Keywords:</span>&nbsp; 
     {{- range .Params.keywords -}}<a href="{{ "keywords/" | relLangURL }}{{ . | urlize }}/">{{ . }}</a> |&#32;
     {{- end -}}
 {{- end -}}
