--- a/themes/dohmh/layouts/partials/takeaction.html
+++ b/themes/dohmh/layouts/partials/takeaction.html
@@ -1,19 +1,6 @@
-<span class="home-label font-weight-bold">Concerned? Take Action</span>
 <!-- Take Action link --> 
 <div class="">
-<p><a href="../../take-action/email-electeds" class="btn btn-sm btn-outline-primary"><i class="fas fa-envelope-open-text mr-1"></i>Email your elected officials</a>
-</p>
+<p>Concerned about this? <a href="../../take-action/email-electeds" class=""><i class="fas fa-envelope-open-text mr-1"></i>Email your elected officials</a>.</p>
+<p><span id="311label" class=""></span> <span id="311" class="destination311"></span></p> 
 </div>
 
-<!-- 311 Links -->
-<div class="my-2">
-    <span id="311label" class="home-label"></span>
-    <div id="311" class="destination311"></div>
-</div>
-
-<!-- socialshare -->
-<div class="">
-    <span class="home-label">Share with a friend:</span>
-    {{- partial "socialshare" . -}}
-
-</div>
