--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -233,7 +233,7 @@
                     <li class="breadcrumb-item"><a href={{ relURL "data-explorer" }}>Data Explorer</a></li>
                 </ul>
             </nav>
-            <div class="float-right px-3">
+            <div class="float-right px-3 d-sm-none d-lg-block">
                 {{- partial "socialshare" . -}}
             </div>
             <h1 class="h2">{{ .Title }} </h1>
@@ -295,7 +295,7 @@
             <!-- Indicator selection (mobile) -->
             <div class="dropdown d-lg-none">
                 <span class='home-label'>Change dataset</span>
-                <button class="btn btn-outline-primary btn-lg btn-block text-wrap text-info dropdown-toggle" type="button"
+                <button class="btn btn-outline-primary btn-lg btn-block text-wrap dropdown-toggle" type="button"
                         id="dropdownIndicator" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     More {{ .Title }} data
                 </button>
@@ -309,7 +309,7 @@
         {{- end -}}
 
         <!-- Indicator title and description -->
-        <span class="home-label font-weight-bold">Dataset</span>
+        <span class="home-label font-weight-bold d-sm-none d-lg-block">Dataset</span>
         <div style="clear:both; border-left: 8px solid #00923E50;" class="px-1">
             <span class="border-bottom mt-2 font-weight-bold d-none d-lg-block"><span id="indicatorTitle">Loading data...</span></span>
             <p class="fs-sm indicator-description">Just a moment...</p>
