--- a/themes/dohmh/layouts/partials/takeaction.html
+++ b/themes/dohmh/layouts/partials/takeaction.html
@@ -1,6 +1,6 @@
 <!-- Take Action link --> 
 <div class="">
-<p>Concerned about this? <a href="../../take-action/email-electeds" class=""><i class="fas fa-envelope-open-text mr-1"></i>Email your elected officials</a>.</p>
+<p><i class="fas fa-envelope-open-text mr-1"></i>Concerned about this? <a href="../../take-action/email-electeds" class="">Email your elected officials</a>.</p>
 <p><span id="311label" class=""></span> <span id="311" class="destination311"></span></p> 
 </div>
 
