--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -505,7 +505,7 @@
                         
                             <div class="col-md-6 col-sm-12 h-100">
                                 <div class="asidebox border-top  pb-0 mb-0">
-                                    <span class="home-label font-weight-bold"><i class="fas fa-database mr-1"></i>Data sources</span>
+                                    <span class="home-label font-weight-bold"><i class="fas fa-info-circle mr-1"></i>Data sources</span>
                                 </div>
                                 <div class="asidebox visFooterBox">
                                 <p class="fs-sm indicator-sources"></p>
