--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -493,10 +493,10 @@
                         <div class="row mb-2">
                             <div class="col-md-6 col-sm-12 h-100">
                                 <div class="asidebox border-top pb-0 mb-0">
-                                    <span class="home-label font-weight-bold"><i class="fas fa-info-circle mr-1"></i>How calculated</span>
+                                    <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>How calculated</span>
                                 </div>
-                                <div class="asidebox visFooterBox">
-                                    <p class="fs-sm indicator-measures"></p>
+                                <div class="asidebox visFooterBox mb-1">
+                                    <p class="fs-xs indicator-measures"></p>
                         
                         
                                 </div>
@@ -505,49 +505,51 @@
                         
                             <div class="col-md-6 col-sm-12 h-100">
                                 <div class="asidebox border-top  pb-0 mb-0">
-                                    <span class="home-label font-weight-bold"><i class="fas fa-info-circle mr-1"></i>Data sources</span>
+                                    <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>Data sources</span>
                                 </div>
                                 <div class="asidebox visFooterBox">
-                                <p class="fs-sm indicator-sources"></p>
+                                <p class="fs-xs indicator-sources"></p>
                         
                                 </div>
-                                
-                            </div>
-            
-                            <div class="col-sm-12">
-                                <div class="row my-4">
-                                    <div class="col-md-4 ml-auto col-sm-12">
-                                        <div class="dropdown">
-                                            <button class="btn btn-sm btn-block btn-outline-light text-secondary dropdown-toggle mb-1" 
-                                            type="button"
-                                            id="downloadDD" 
-                                            data-toggle="dropdown" 
-                                            aria-haspopup="true" 
-                                            aria-expanded="false"
-                                            ><i class="fa fa-download mr-1"></i>Download Data
-                                        </button>
-                                        <div class="dropdown-menu dropdown-menu-right" 
-                                        aria-labelledby="downloadDD">
-                                        <a class="dropdown-item buttons-csv btn-outline-info" id="chartView">This view</a>
-                                        <a class="dropdown-item buttons-csv btn-outline-info" id="allData">Full table</a>
-                                        <!--<a class="dropdown-item buttons-csv btn-outline-info" id="thisView">Current table view</a>-->        
-                                        <!--<a class="dropdown-item buttons-csv btn-outline-info" id="rawData">Raw data for this indicator</a>-->
-                                        </div>
-                                    </div>
-                                    <button class="btn float-right btn-sm btn-block btn-outline-light text-secondary mb-1"
-                                    onclick="copyCitation()" id="citeButton"><i class="fas fa-copy mr-1"></i>Copy citation</button>
-                                    <input type="text" id="citeText" value=""
-                                    style="display:inline-block; width:100%; height: 40px; font-size: 14px;"
-                                    class="my-2 sr-only">
-                                    <p class="fs-sm text-center"><a href="https://github.com/nychealth/EHDP-data/tree/production/indicators" target="_blank">
-                                        <i class="fas fa-external-link-alt mr-1"></i>Full data Github repo
-                                   </a></p>
 
-                                </div>
+
                                 
-                                </div>
-            
                             </div>
+            
+                        </div>
+
+                        <div class="row mt-1">
+                            <div class="col-md-6 col-sm-12">
+                                <div class="dropdown">
+                                    <button class="btn btn-sm btn-block btn-outline-light text-secondary dropdown-toggle mb-1" 
+                                    type="button"
+                                    id="downloadDD" 
+                                    data-toggle="dropdown" 
+                                    aria-haspopup="true" 
+                                    aria-expanded="false"
+                                    ><i class="fa fa-download mr-1"></i>Download Data
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right" 
+                                aria-labelledby="downloadDD">
+                                <a class="dropdown-item buttons-csv btn-outline-info" id="chartView"><i class="fa fa-download mr-1"></i>Download this view</a>
+                                <a class="dropdown-item buttons-csv btn-outline-info" id="allData"><i class="fa fa-download mr-1"></i>Download full data table</a>
+                                <a class="dropdown-item btn-outline-info" href="https://github.com/nychealth/EHDP-data/tree/production/indicators" target="_blank"><i class="fas fa-external-link-alt mr-1"></i>Data Github repo</a>
+                                <!--<a class="dropdown-item buttons-csv btn-outline-info" id="thisView">Current table view</a>-->        
+                                <!--<a class="dropdown-item buttons-csv btn-outline-info" id="rawData">Raw data for this indicator</a>-->
+                                </div>
+                                </div>
+
+                            </div>
+
+                            <div class="col-md-6 col-sm-12">
+                                <button class="btn float-right btn-sm btn-block btn-outline-light text-secondary mb-1"
+                                onclick="copyCitation()" id="citeButton"><i class="fas fa-copy mr-1"></i>Copy citation</button>
+                                <input type="text" id="citeText" value=""
+                                style="display:inline-block; width:100%; height: 40px; font-size: 14px;"
+                                class="my-2 sr-only">
+                                
+                            </div>
+
                         </div>
                         <!--.footer -->
 
