flip footer arrangement

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -490,34 +490,6 @@
             
             
                         <!-- FOOTER BUSINESS -->
-                        <div class="row mb-2">
-                            <div class="col-md-6 col-sm-12 h-100">
-                                <div class="asidebox border-top pb-0 mb-0">
-                                    <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>How calculated</span>
-                                </div>
-                                <div class="asidebox visFooterBox mb-1">
-                                    <p class="fs-xs indicator-measures"></p>
-                        
-                        
-                                </div>
-                        
-                            </div>
-                        
-                            <div class="col-md-6 col-sm-12 h-100">
-                                <div class="asidebox border-top  pb-0 mb-0">
-                                    <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>Data sources</span>
-                                </div>
-                                <div class="asidebox visFooterBox">
-                                <p class="fs-xs indicator-sources"></p>
-                        
-                                </div>
-
-
-                                
-                            </div>
-            
-                        </div>
-
                         <div class="row mt-1">
                             <div class="col-md-6 col-sm-12">
                                 <div class="dropdown">
@@ -551,6 +523,36 @@
                             </div>
 
                         </div>
+                        
+                        <div class="row mb-2">
+                            <div class="col-md-6 col-sm-12 h-100">
+                                <div class="asidebox pb-0 mb-0">
+                                    <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>How calculated</span>
+                                </div>
+                                <div class="asidebox visFooterBox mb-1">
+                                    <p class="fs-xs indicator-measures"></p>
+                        
+                        
+                                </div>
+                        
+                            </div>
+                        
+                            <div class="col-md-6 col-sm-12 h-100">
+                                <div class="asidebox pb-0 mb-0">
+                                    <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>Data sources</span>
+                                </div>
+                                <div class="asidebox visFooterBox">
+                                <p class="fs-xs indicator-sources"></p>
+                        
+                                </div>
+
+
+                                
+                            </div>
+            
+                        </div>
+
+
                         <!--.footer -->
 
 
