minor changes to layout and copy

--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -170,14 +170,14 @@
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-6">
       <div id="baseLayerButtons">
         <h4 class="home-label">Choose data</h4>
         <div id="buttonHolderBase" style="display: inline-block"></div>
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-2">
       <div id="baseLayerButtons" class="">
         <h4 class="home-label" class="text-align-right">Add layers</h4>
         <div id="buttonHolderAdditional" style="display: inline-block"></div>
@@ -225,22 +225,24 @@
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <h4 class="h5">Submit your heat story</h4>
-          <p>Tell us how heat affects you - your health, in your home, your neighborhood, or any aspect of your life. </p>
-          <p><a href='https://docs.google.com/forms/d/e/1FAIpQLSdwGh2hb4LeLsQxH-w9awMAF2qc_UgOsD_bBYhRVa3ECxM8Bg/viewform'>Submit a story here</a> - you can tell us anything you like about how heat affects your life. You can even upload pictures of your home, neighborhood, park, or anything else that helps illustrate your story. You can add your name, or remain anonymous - it's up to you.</p>
-          <p>We'll add your story to the map - we'll only include whatever details or information you choose to share with us. </p>                   
-
+          <p>How does heat affects health, in your home, your neighborhood, and your life? </p>
+          <p><a href='https://docs.google.com/forms/d/e/1FAIpQLSdwGh2hb4LeLsQxH-w9awMAF2qc_UgOsD_bBYhRVa3ECxM8Bg/viewform'>Submit a story here</a> - tell us how heat affects your life. You can even upload pictures of your home, neighborhood, park, or anything else that helps illustrate your story. You can add your name, or remain anonymous - it's up to you.</p>
+          <p>We'll review submissions and add some of them to this map. We'll only include whatever details you choose to share with us.</p>
         </div>
       </div>
 
       <div class="row my-4">
-        <div class="col-md-4 col-sm-12">
+        <div class="col-md-6 col-sm-12">
           <div class="btn-toggle">
             <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target-1" aria-expanded="false" aria-controls="toggle-target-1">
-                <span class="title">Community science data collection</span>
+                <span class="title" id="communityScience">Community science data collection</span>
             </button>
           </div>
 
         <div class="collapse p-2 border mb-2 fs-sm" id="toggle-target-1">
+          <p> Stories featured in the South Bronx and northern Manhattan were collected in partnership with South Bronx Unite, WE ACT for Environmental Justice, and CBOs 9-12. These areas were selected because they are vulnerable to the health risks of extreme heat due to economic, racial, and social inequities.</p>
+          <p><strong> Hyperlocal data vs citywide data</strong></p>
+          <p> This heat story map features data collected across New York City and hosted on the Environment and Health Data Portal about air quality, air conditioning access, neighborhood poverty, and more. You can explore each dataset more thoroughly through our Data Explorer. The map also features a limited amount of data collected in northern Manhattan and the South Bronx because of the parameters of the original study. These hyperlocal data layers were generated through the community science approach described, and provide valuable insights into block-level differences at different times of day. </p>
             <p> Using a community science approach, the data collection process was
               led by residents living in areas most affected by heat. On Saturday
               July 24, 2021, these community scientists traversed along 10
@@ -279,7 +281,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 col-sm-12">
+        <div class="col-md-6 col-sm-12">
           <div class="btn-toggle">
             <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target" aria-expanded="false" aria-controls="toggle-target">
                 <span class="title">Project credits</span>
@@ -287,7 +289,8 @@
         </div>
     
         <div class="collapse p-2 border fs-sm" id="toggle-target">
-          <p> This project was originally titled <strong>"Addressing the Urban Heat Island Effect through an Equity Lens: A Community Science Project,”</strong> and combines community science with interviews to create a way to look at heat vulnerability that focuses on the intersections of extreme heat, health, and social inequities.
+
+          <p> This project, <strong>"Addressing the Urban Heat Island Effect through an Equity Lens: A Community Science Project,”</strong> combines community science with interviews to create a way to look at heat vulnerability that focuses on the intersections of extreme heat, health, and social inequities.
 
             <p>This project was part of a nationwide campaign from the NIHHIS (National Integrated Heat Health Information System) and jointly developed by NOAA (National Oceanic and Atmospheric Administration) and the CDC (Centers for Disease Control and Prevention). The NYC campaign partnered with South Bronx Unite and was funded by NOAA and Columbia University’s Earth Frontiers Grant. Data collection and analysis were the result of a partnership with CAPA Strategies.</p>
           <ul class="extensible-list">
@@ -308,21 +311,6 @@
                 <li>Community Boards 9-12</li>
           </ul>
         </div>
-        </div>
-
-        <div class="col-md-4 col-sm-12">
-          <div class="btn-toggle">
-            <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target-2" aria-expanded="false" aria-controls="toggle-target-1">
-                <span class="title">About the data and stories </span>
-            </button>
-        </div>
-
-        <div class="collapse p-2 border mb-2 fs-sm" id="toggle-target-2">
-          <p> Stories featured in the South Bronx and northern Manhattan were collected in partnership with South Bronx Unite, WE ACT for Environmental Justice, and CBOs 9-12. These areas were selected because they are vulnerable to the health risks of extreme heat due to economic, racial, and social inequities.</p>
-          <p><strong> Hyperlocal data vs citywide data</strong></p>
-          <p> This heat story map features data collected across New York City and hosted on the Environment and Health Data Portal about air quality, air conditioning access, neighborhood poverty, and more. You can explore each dataset more thoroughly through our Data Explorer. The map also features a limited amount of data collected in northern Manhattan and the South Bronx because of the parameters of the original study. These hyperlocal data layers were generated through the community science approach described, and provide valuable insights into block-level differences at different times of day. </p>
-    </ul>
-  </div>
         </div>
       </div>
     </div>
