--- a/themes/dohmh/layouts/data-stories/single.html
+++ b/themes/dohmh/layouts/data-stories/single.html
@@ -7,7 +7,7 @@
     <div id="datastoryheader" style="background-image: URL({{ $image.RelPermalink }}); background-position: 50% 25%">
 
         <div class="medium my-auto">
-            <h1 class="titleheader d-none d-sm-block py-2 px-4">
+            <h1 class="titleheader d-none d-md-block py-2 px-4">
                 {{ .Title }}
             </h1>
 
