--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -239,3 +239,7 @@ $color-data-explorer: #0A408A;
 .accordion-group a[data-toggle="collapse"][aria-expanded="true"]:after {
   content: "\2014";
 }
+
+#primary-content h3 {
+  padding-top: 20px;
+}
