--- a/themes/dohmh/layouts/data-features/ice.html
+++ b/themes/dohmh/layouts/data-features/ice.html
@@ -29,17 +29,17 @@
                 <em>INTERNAL NOTE: mock data above</em>
 
                 <h2 class="h4 mt-4">How it works</h2>
-                  <ul>
+                  <ol>
                   <li>You define a population that you consider to be privileged</li>
                   <li>You define a population that you consider to be unprivileged, or deprived</li>
-                  </ul>
-                  <p>For each neighborhood, you calculate a score:</p>
+                  <li>For each neighborhood, you calculate a score:</li>
+                  </ol>
                   <div class="px-6 my-4 text-center font-weight-bold">
                   (Privileged population – deprived population) 
                   <hr class="my-1">
                   Total population 
                   </div>
-                  <p>For each neighborhood, this results in a score that ranges from –1 to 1. Here's what it means:</p>
+                  <p>For each neighborhood, this results in a score that ranges from -1 to 1.</p>
 
                 <div class="row my-4">
                   <div class="col-md-4 border py-2">
@@ -107,7 +107,7 @@
               <p>It's widely known that in New York City (as elsewhere), people with lower socio-economic status bear a higher burden of poor health and premature death. To address this, it's important to analyze health data using socioeconomic data. In 2011, the Health Department adopted a policy of using neighborhood-level poverty (the percent of people in an area living below the federal poverty threshold) in its analysis of data on health outcomes. <a href="https://www.nyc.gov/assets/doh/downloads/pdf/epi/epiresearch-SES-measure.pdf">Read about the rationale for using neighborhood poverty</a>.</p>
               <p>There are many good reasons to use neighborhood poverty. It's a good proxy for when individual-level data (eg personal income) are unavailable. And, it's been shown to predict a wide range of health outcomes, including mortality.  </p>
               <p>But neighborhood poverty doesn't fully capture the factors that affect health. Low poverty areas – with under 10% of residents living below the federal poverty threshold) include residents with a wide range of incomes – bundling people with very different experiences and resources. Furthermore, we see time and again how structural racism exposes people of color to greater health threats and erects barriers to resources that protect health, like education, health care, employment, housing, and economic stability. Neighborhood poverty captures how economic factors affect health, but not how social factors like racism play a role.   </p>
-              <p>More recently, <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4815605/">Health Department researchers published a paper showing that another measure, 'the index of concentration at the extremes,' does a better job of showing disparities</a>. This means that the Segregation Score showed greater differences in health outcomes between groups on each end of it, compared to things like neighborhood poverty. In other words, it more accurately captures differences in neigborhoods.</p>
+              <p>More recently, <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4815605/">Health Department researchers published a paper showing that another measure, 'the index of concentration at the extremes,' does a better job of showing disparities</a>. This means that the Segregation Score showed greater differences in health outcomes between groups on each end of it, compared to things like neighborhood poverty. In other words, it more accurately shows the different experiences that different people have.</p>
 
               <h2 class="h4">Using Segregation Score to analyze health data</h2>
               <p>When we put neighborhoods into 5 buckets (quintiles) by their segregation score, and use that to look at health data, we can see significant disparities. For example, below are asthma ED visits for children age 5 to 17, sorted by segregation score.  
