--- a/themes/dohmh/layouts/partials/takeaction.html
+++ b/themes/dohmh/layouts/partials/takeaction.html
@@ -1,5 +1,5 @@
 <!-- Take Action link --> 
-<div class="">
+<div class="fs-md">
 <p><i class="fas fa-envelope-open-text mr-1"></i>Concerned about this? <a href="../../take-action/email-electeds" class="">Email your elected officials</a>.</p>
 <p><span id="311label" class=""></span> <span id="311" class="destination311"></span></p> 
 </div>
