add to metadata object

--- a/themes/dohmh/layouts/data-explorer/data-index.html
+++ b/themes/dohmh/layouts/data-explorer/data-index.html
@@ -96,8 +96,10 @@
                         
                         var measure = {};
                         measure.indicatorName    = indicators[i].IndicatorName
+                        measure.indicatorID      = indicators[i].IndicatorID
                         measure.indicatorDesc    = indicators[i].IndicatorDescription
                         measure.measureName      = indicators[i].Measures[j].MeasureName
+                        measure.measureID        = indicators[i].Measures[j].MeasureID
                         measure.measurementType  = indicators[i].Measures[j].MeasurementType
                         measure.displayType      = indicators[i].Measures[j].DisplayType
                         
