move cooling-info to DFs

--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -26,6 +26,7 @@
         </div>
 
         <div class="col-md-5">
+          <!--
           <div class="border p-1 mt-2">
             Learn more about: 
             <ul></ul>
@@ -46,6 +47,20 @@
               </li>
             </ul>
           </div>
+        -->
+
+        <div class="border p-1 mb-4">
+          <strong
+            ><i class="fas fa-exclamation-triangle mr-1" aria-hidden="true"></i
+            >Before we get started:</strong
+          ><br>
+          if you are feeling very hot, with nausea or vomiting, fast pulse,
+          weakness or dizziness, you may need medical help.
+          <a href="https://www.cdc.gov/disasters/extremeheat/warning.html"
+            >See a full list of symptoms of heat-related illness</a
+          >.
+        </div>
+
         </div>
       </div>
     </div>
@@ -64,7 +79,7 @@
         <p>
           Today's weather is
           <span id="hot" class="font-weight-bold p-1">HOT</span>. The current
-          temp is <span id="currentTemp">XX</span> and it might reach
+          temp is <span id="currentTemp">XX</span> and the forecast high is
           <span id="maxTemp">YY</span> today.
           <a href="https://forecast7.com/en/40d71n74d01/new-york/?unit=us"
             >Get a full weather forecast here</a
@@ -137,17 +152,6 @@
 
     <!-- main content column -->
     <div class="col-md-7 overflow-hidden fs-rg mr-auto" id="primary-content">
-      <div class="border p-1 mb-4">
-        <strong
-          ><i class="fas fa-exclamation-triangle mr-1" aria-hidden="true"></i
-          >Before we get started:</strong
-        ><br>
-        if you are feeling very hot, with nausea or vomiting, fast pulse,
-        weakness or dizziness, you may need medical help.
-        <a href="https://www.cdc.gov/disasters/extremeheat/warning.html"
-          >See a full list of symptoms of heat-related illness</a
-        >.
-      </div>
 
       <div id="start">
         <div class="col-md-6 mx-auto">
@@ -156,7 +160,7 @@
             onclick="runQuestions()"
           >
             <i class="fas fa-arrow-circle-down mr-1" aria-hidden="true"></i
-            >Let's get started
+            >Get started
           </button>
         </div>
       </div>
