--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -79,8 +79,9 @@
     <div class="col-md-4 ml-auto">
       <div class="sticky-top border p-2" style="z-index: 0">
         <p>
-          Today's weather is
-          <span id="hot" class="font-weight-bold p-1">HOT</span>. The current
+          Today's weather is:
+          <span id="hot" class="font-weight-bold p-1">HOT</span>.
+          <br>The current
           temp is <span id="currentTemp">XX</span> and the forecast high is
           <span id="maxTemp">YY</span> today.
           <a href="https://forecast7.com/en/40d71n74d01/new-york/?unit=us"
@@ -91,7 +92,7 @@
         <hr class="my-2" />
 
         <p>
-          The current air quality is
+          The current air quality is: 
           <span id="aqimeaning" class="font-weight-bold p-1"
             >AQI interpretation</span
           >.
